--- a/src/app/components/data/data.component.html
+++ b/src/app/components/data/data.component.html
@@ -46,6 +46,29 @@
 
 
     <div class="form-group row">
+        <label class="col-2 col-form-label">Username</label>
+        <div class="col-md-8">
+
+            <input class="form-control" type="text" placeholder="Username" formControlName="username">
+        </div>
+    </div>
+
+    <div class="form-group row">
+        <label class="col-2 col-form-label">Password</label>
+        <div class="col-md-8">
+
+            <input class="form-control" type="password" placeholder="Password" formControlName="password1">
+        </div>
+    </div>
+
+    <div class="form-group row">
+        <label class="col-2 col-form-label"> Confirmar Password</label>
+        <div class="col-md-8">
+
+            <input class="form-control" type="password" placeholder="Password" formControlName="password2">
+        </div>
+    </div>
+    <div class="form-group row">
         <label class="col-2 col-form-label">&nbsp;</label>
         <div class="input-group col-md-8">
             <button type="submit" class="btn btn-outline-primary">
@@ -54,5 +77,6 @@
         </div>
     </div>
     {{forma.valid}}
+    <br> {{forma.status}}
 
 </form>
